--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 4rem;
+}
 
+.food_list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    gap: 2rem;
+}
