--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
-    margin-top: 4rem;
-}
+    background-color: #fed766;
+}   
 
 .food_list {
     display: flex;
     flex-wrap: wrap;
     padding: 1rem;
     gap: 2rem;
+    margin: 0% 10%;
 }
