--- a/src/components/FoodBox/FoodBox.css
+++ b/src/components/FoodBox/FoodBox.css
@@ -5,4 +5,5 @@
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     max-width: 350px;
     line-height: .5rem;
+    background-color: #f4f4f8;
 }
