--- a/src/components/FoodSearch/FoodSearch.css
+++ b/src/components/FoodSearch/FoodSearch.css
@@ -1,7 +1,18 @@
 .search {
+    display: flex;
+    margin: auto;
     align-self: 'center';
     width: 350px;
     padding: 1rem;
     border-style: 'none';
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.search_container {
+    margin-top: 2rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    background-color: #2ab7ca;
 }
